--- a/_includes/footer_new.html
+++ b/_includes/footer_new.html
@@ -2,7 +2,7 @@
 <br/>
 <center>
 <font size="-1">
-<a href="{{ site.pet }}/qemutux.xml">feeds</a> <a href="{{ site.pet }}/archive-qemutux.html">archive</a> <br/>
+	<a href="{{ site.pet }}/qemutux.xml">feeds</a> <a href="{{ site.pet }}/archive-qemutux.html">archive</a> <a href="{{ site.pet }}/tags/cloud.html">tags</a><br/>
 <font size="-2" class="melongo">alinux.web.id, established since 2007, hosted by <a href="http://tor.hu" target="_new">tor.hu</a>, powered by <a href="http://www.vim.org" target="_new">vim</a> and <a href="http://jekyllrb.com" target="_new">jekyll</a><br/>
 <a href="https://github.com/deanet/alinux-documentation" target="_new">source</a>
  </font>
