--- a/_layouts/post_new.html
+++ b/_layouts/post_new.html
@@ -2,7 +2,8 @@
 layout: default_new
 ---
 <font size="-1">
-<b>{{ page.title }}</b><br/>
+	<b>{{ page.title }}</b> <g:plusone size="small"></g:plusone>
+	<br/>
 <br>
 <!-- content here -->
 {{ content }}
@@ -16,7 +17,6 @@ Tags: {% for tag in page.categories %}
 <br>
 <br>
 <br>
-
 
 </font>
 
