--- a/_includes/header_new.html
+++ b/_includes/header_new.html
@@ -1,7 +1,7 @@
 	<dl class="font-variations">
-		<font size="-1"><a href="{{ site.pet }}">Home</a>
-
-		</font>
+		<center>	<font size="-1"><a href="{{ site.pet }}">Home</a>&nbsp;&nbsp;<a href="{{ site.pet }}/archive-qemutux.html">Archive</a>&nbsp;&nbsp;<a href="{{ site.pet }}/tags/cloud.html">Tags</a>&nbsp;&nbsp;<a href="{{ site.pet }}/qemutux.xml">Feeds</a>
+			</font>
+		</center>
 	<!--
 		<dd style="font-family:font-file-56252;font-style:normal;font-weight:400;font-size:54px;" class="sample">
 			<a href="{{ site.pet }}"><span class="blue">Path</span>ing <span class="blue">Q</span>emu<span class="blue">tux</span></a>
