--- a/_layouts/archives.html
+++ b/_layouts/archives.html
@@ -11,6 +11,28 @@
 </head>
 <script type="text/javascript" src="{{ site.pet }}/js/jquery-1.5.min.js"></script>
 <script type="text/javascript" src="{{ site.pet }}/js/jquery.quicksearch.js"></script>
+<script type="text/javascript">
+          (function() {
+                      var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+                          po.src = 'https://apis.google.com/js/plusone.js';
+                              var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+                                })();
+                        </script>
+
+
+        <script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', '{{ site.google_analytics_code }}']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 
 
 
