update-css-highlight

--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ pre {
 }
 
 */
-
+/*
 pre
     {
     border-left: 2px solid #ccc;
@@ -200,4 +200,4 @@ pre
 width: auto !important;
         margin-bottom: 25px;
     }
-
+*/
