--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -8,6 +8,9 @@
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/style.css" type="text/css" media="screen"/>
     <link rel="stylesheet" href="/syntax.css" type="text/css" media="screen"/>
+   <link rel="stylesheet" href="/shared/css/documentation.css" type="text/css" media="screen"/>
+
+
 </head>
 
 <script type="text/javascript">
