--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ a:hover {
 .title {
     border-bottom: 1px solid #ccc;
     color: #333;
-    font-size: 1.5em;
+    font-size: 14px;
     font-weight: bold;
     padding-bottom: 5px;
 }
